# minor

./: .gitignore  CHANGELOG.md  NEXT_STEPS.md  README.md  app.py  future_fixes_v0.1.0.md  pyproject.toml  requirements.txt  run_overnight.ps1  test_cuda.py
abstraction/audio/: clap.py  features.py
abstraction/data/: datasets.py
configs/: base.yaml  config.yaml
data/: pca_model.pkl  track_ids.json
datasets/: README.md
dscripts/: __init__.py  analyze_features.py  compare_features.py  compare_pca.py  data_loader.py  feature_extraction.py  logger.py  normalize_features.py  process_music.py  reduce_dimensionality.py
evaluation/: README.md  clip_alignment.py  fid.py  lpips_diversity.py  reconstruction.py  retrieval.py  retrieval_testing.py  test_vae_reconstruction.py
legacy/: README.md
logs/: feature_analysis_metrics_20250225_143301.json  feature_extraction_metrics_20250225_091246.json  feature_reduction_metrics_20250225_143250.json
preprocessing/: extract_audio_features.py  extract_clap_features.py
scratch/: check_colors.py  check_latents.py  check_split.py  check_variations.py  generate_beautiful_gallery.py
scripts/: extract_audio_features.py  generate_image.py  generate_image_from_mp3.py  inference.py
tmodels/: audio_vae.pth  inverse_mapping_network.pth  mapping_network.pth  sample_orig_audio.pt  sample_recon_audio.pt
training/: __init__.py  analyze_training.py  data_loader_audio_img.py  test_autoencoder.py  test_model.py  train_audio_vae.py  train_autoencoder.py  train_image_vae.py  train_latent_diffusion.py  train_mapping_network.py
visualization/: export_wandb_curves.py  plot_loss_curves.py  visualize_latent_space.py
(+46 files in other folders)
